// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconOutline props exists 1`] = `
<
  style={
    [
      {
        "color": "red",
        "fontFamily": "antoutline",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  啒
</>
`;

exports[`IconOutline should create Icon element. 1`] = `
<
  style={
    [
      {
        "color": "black",
        "fontFamily": "antoutline",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  啊
</>
`;

exports[`IconOutline should create outlineGlyphMap 1`] = `
{
  "account-book": 21834,
  "aim": 21835,
  "alert": 21836,
  "alibaba": 21837,
  "align-center": 21838,
  "align-left": 21839,
  "align-right": 21840,
  "alipay": 21842,
  "alipay-circle": 21841,
  "aliwangwang": 21843,
  "aliyun": 21844,
  "amazon": 21845,
  "android": 21846,
  "ant-cloud": 21847,
  "ant-design": 21848,
  "apartment": 21849,
  "api": 21850,
  "apple": 21851,
  "appstore": 21853,
  "appstore-add": 21852,
  "area-chart": 21854,
  "arrow-down": 21855,
  "arrow-left": 21856,
  "arrow-right": 21857,
  "arrow-up": 21858,
  "arrows-alt": 21859,
  "audio": 21861,
  "audio-muted": 21860,
  "audit": 21862,
  "backward": 21863,
  "baidu": 21864,
  "bank": 21865,
  "bar-chart": 21866,
  "barcode": 21867,
  "bars": 21868,
  "behance": 21870,
  "behance-square": 21869,
  "bell": 21871,
  "bg-colors": 21872,
  "bilibili": 21873,
  "block": 21874,
  "bold": 21875,
  "book": 21876,
  "border": 21885,
  "border-bottom": 21877,
  "border-horizontal": 21878,
  "border-inner": 21879,
  "border-left": 21880,
  "border-outer": 21881,
  "border-right": 21882,
  "border-top": 21883,
  "border-verticle": 21884,
  "borderless-table": 21886,
  "box-plot": 21887,
  "branches": 21888,
  "bug": 21889,
  "build": 21890,
  "bulb": 21891,
  "calculator": 21892,
  "calendar": 21893,
  "camera": 21894,
  "car": 21895,
  "caret-down": 21896,
  "caret-left": 21897,
  "caret-right": 21898,
  "caret-up": 21899,
  "carry-out": 21900,
  "check": 21903,
  "check-circle": 21901,
  "check-square": 21902,
  "chrome": 21904,
  "ci": 21906,
  "ci-circle": 21905,
  "clear": 21907,
  "clock-circle": 21908,
  "close": 21911,
  "close-circle": 21909,
  "close-square": 21910,
  "cloud": 21916,
  "cloud-download": 21912,
  "cloud-server": 21913,
  "cloud-sync": 21914,
  "cloud-upload": 21915,
  "cluster": 21917,
  "code": 21919,
  "code-sandbox": 21918,
  "codepen": 21921,
  "codepen-circle": 21920,
  "coffee": 21922,
  "column-height": 21923,
  "column-width": 21924,
  "comment": 21925,
  "compass": 21926,
  "compress": 21927,
  "console-sql": 21928,
  "contacts": 21929,
  "container": 21930,
  "control": 21931,
  "copy": 21932,
  "copyright": 21934,
  "copyright-circle": 21933,
  "credit-card": 21935,
  "crown": 21936,
  "customer-service": 21937,
  "dash": 21938,
  "dashboard": 21939,
  "database": 21940,
  "delete": 21943,
  "delete-column": 21941,
  "delete-row": 21942,
  "delivered-procedure": 21944,
  "deployment-unit": 21945,
  "desktop": 21946,
  "diff": 21947,
  "dingding": 21948,
  "dingtalk": 21949,
  "disconnect": 21950,
  "discord": 21951,
  "dislike": 21952,
  "docker": 21953,
  "dollar": 21955,
  "dollar-circle": 21954,
  "dot-chart": 21956,
  "dot-net": 21957,
  "double-left": 21958,
  "double-right": 21959,
  "down": 21962,
  "down-circle": 21960,
  "down-square": 21961,
  "download": 21963,
  "drag": 21964,
  "dribbble": 21966,
  "dribbble-square": 21965,
  "dropbox": 21967,
  "edit": 21968,
  "ellipsis": 21969,
  "enter": 21970,
  "environment": 21971,
  "euro": 21973,
  "euro-circle": 21972,
  "exception": 21974,
  "exclamation": 21976,
  "exclamation-circle": 21975,
  "expand": 21978,
  "expand-alt": 21977,
  "experiment": 21979,
  "export": 21980,
  "eye": 21982,
  "eye-invisible": 21981,
  "facebook": 21983,
  "fall": 21984,
  "fast-backward": 21985,
  "fast-forward": 21986,
  "field-binary": 21987,
  "field-number": 21988,
  "field-string": 21989,
  "field-time": 21990,
  "file": 22008,
  "file-add": 21991,
  "file-done": 21992,
  "file-excel": 21993,
  "file-exclamation": 21994,
  "file-gif": 21995,
  "file-image": 21996,
  "file-jpg": 21997,
  "file-markdown": 21998,
  "file-pdf": 21999,
  "file-ppt": 22000,
  "file-protect": 22001,
  "file-search": 22002,
  "file-sync": 22003,
  "file-text": 22004,
  "file-unknown": 22005,
  "file-word": 22006,
  "file-zip": 22007,
  "filter": 22009,
  "fire": 22010,
  "flag": 22011,
  "folder": 22015,
  "folder-add": 22012,
  "folder-open": 22013,
  "folder-view": 22014,
  "font-colors": 22016,
  "font-size": 22017,
  "fork": 22018,
  "form": 22019,
  "format-painter": 22020,
  "forward": 22021,
  "frown": 22022,
  "fullscreen": 22024,
  "fullscreen-exit": 22023,
  "function": 22025,
  "fund": 22028,
  "fund-projection-screen": 22026,
  "fund-view": 22027,
  "funnel-plot": 22029,
  "gateway": 22030,
  "gif": 22031,
  "gift": 22032,
  "github": 22033,
  "gitlab": 22034,
  "global": 22035,
  "gold": 22036,
  "google": 22038,
  "google-plus": 22037,
  "group": 22039,
  "harmony-o-s": 22040,
  "hdd": 22041,
  "heart": 22042,
  "heat-map": 22043,
  "highlight": 22044,
  "history": 22045,
  "holder": 22046,
  "home": 22047,
  "hourglass": 22048,
  "html5": 22049,
  "idcard": 22050,
  "ie": 22051,
  "import": 22052,
  "inbox": 22053,
  "info": 22055,
  "info-circle": 22054,
  "insert-row-above": 22056,
  "insert-row-below": 22057,
  "insert-row-left": 22058,
  "insert-row-right": 22059,
  "instagram": 22060,
  "insurance": 22061,
  "interaction": 22062,
  "issues-close": 22063,
  "italic": 22064,
  "java": 22066,
  "java-script": 22065,
  "key": 22067,
  "kubernetes": 22068,
  "laptop": 22069,
  "layout": 22070,
  "left": 22073,
  "left-circle": 22071,
  "left-square": 22072,
  "like": 22074,
  "line": 22077,
  "line-chart": 22075,
  "line-height": 22076,
  "link": 22078,
  "linkedin": 22079,
  "linux": 22080,
  "loading": 22082,
  "loading-3-quarters": 22081,
  "lock": 22083,
  "login": 22084,
  "logout": 22085,
  "mac-command": 22086,
  "mail": 22087,
  "man": 22088,
  "medicine-box": 22089,
  "medium": 22091,
  "medium-workmark": 22090,
  "meh": 22092,
  "menu": 22095,
  "menu-fold": 22093,
  "menu-unfold": 22094,
  "merge": 22097,
  "merge-cells": 22096,
  "message": 22098,
  "minus": 22101,
  "minus-circle": 22099,
  "minus-square": 22100,
  "mobile": 22102,
  "money-collect": 22103,
  "monitor": 22104,
  "moon": 22105,
  "more": 22106,
  "muted": 22107,
  "node-collapse": 22108,
  "node-expand": 22109,
  "node-index": 22110,
  "notification": 22111,
  "number": 22112,
  "one-to-one": 22113,
  "open-a-i": 22114,
  "ordered-list": 22115,
  "paper-clip": 22116,
  "partition": 22117,
  "pause": 22119,
  "pause-circle": 22118,
  "pay-circle": 22120,
  "percentage": 22121,
  "phone": 22122,
  "pic-center": 22123,
  "pic-left": 22124,
  "pic-right": 22125,
  "picture": 22126,
  "pie-chart": 22127,
  "pinterest": 22128,
  "play-circle": 22129,
  "play-square": 22130,
  "plus": 22133,
  "plus-circle": 22131,
  "plus-square": 22132,
  "pound": 22135,
  "pound-circle": 22134,
  "poweroff": 22136,
  "printer": 22137,
  "product": 22138,
  "profile": 22139,
  "project": 22140,
  "property-safety": 22141,
  "pull-request": 22142,
  "pushpin": 22143,
  "python": 22144,
  "qq": 22145,
  "qrcode": 22146,
  "question": 22148,
  "question-circle": 22147,
  "radar-chart": 22149,
  "radius-bottomleft": 22150,
  "radius-bottomright": 22151,
  "radius-setting": 22152,
  "radius-upleft": 22153,
  "radius-upright": 22154,
  "read": 22155,
  "reconciliation": 22156,
  "red-envelope": 22157,
  "reddit": 22158,
  "redo": 22159,
  "reload": 22160,
  "rest": 22161,
  "retweet": 22162,
  "right": 22165,
  "right-circle": 22163,
  "right-square": 22164,
  "rise": 22166,
  "robot": 22167,
  "rocket": 22168,
  "rollback": 22169,
  "rotate-left": 22170,
  "rotate-right": 22171,
  "ruby": 22172,
  "safety": 22174,
  "safety-certificate": 22173,
  "save": 22175,
  "scan": 22176,
  "schedule": 22177,
  "scissor": 22178,
  "search": 22179,
  "security-scan": 22180,
  "select": 22181,
  "send": 22182,
  "setting": 22183,
  "shake": 22184,
  "share-alt": 22185,
  "shop": 22186,
  "shopping": 22188,
  "shopping-cart": 22187,
  "shrink": 22189,
  "signature": 22190,
  "sisternode": 22191,
  "sketch": 22192,
  "skin": 22193,
  "skype": 22194,
  "slack": 22196,
  "slack-square": 22195,
  "sliders": 22197,
  "small-dash": 22198,
  "smile": 22199,
  "snippets": 22200,
  "solution": 22201,
  "sort-ascending": 22202,
  "sort-descending": 22203,
  "sound": 22204,
  "split-cells": 22205,
  "spotify": 22206,
  "star": 22207,
  "step-backward": 22208,
  "step-forward": 22209,
  "stock": 22210,
  "stop": 22211,
  "strikethrough": 22212,
  "subnode": 22213,
  "sun": 22214,
  "swap": 22217,
  "swap-left": 22215,
  "swap-right": 22216,
  "switcher": 22218,
  "sync": 22219,
  "table": 22220,
  "tablet": 22221,
  "tag": 22222,
  "tags": 22223,
  "taobao": 22225,
  "taobao-circle": 22224,
  "team": 22226,
  "thunderbolt": 22227,
  "tik-tok": 22228,
  "to-top": 22229,
  "tool": 22230,
  "trademark": 22232,
  "trademark-circle": 22231,
  "transaction": 22233,
  "translation": 22234,
  "trophy": 22235,
  "truck": 22236,
  "twitch": 22237,
  "twitter": 22238,
  "underline": 22239,
  "undo": 22240,
  "ungroup": 22241,
  "unlock": 22242,
  "unordered-list": 22243,
  "up": 22246,
  "up-circle": 22244,
  "up-square": 22245,
  "upload": 22247,
  "usb": 22248,
  "user": 22252,
  "user-add": 22249,
  "user-delete": 22250,
  "user-switch": 22251,
  "usergroup-add": 22253,
  "usergroup-delete": 22254,
  "verified": 22255,
  "vertical-align-bottom": 22256,
  "vertical-align-middle": 22257,
  "vertical-align-top": 22258,
  "vertical-left": 22259,
  "vertical-right": 22260,
  "video-camera": 22262,
  "video-camera-add": 22261,
  "wallet": 22263,
  "warning": 22264,
  "wechat": 22266,
  "wechat-work": 22265,
  "weibo": 22269,
  "weibo-circle": 22267,
  "weibo-square": 22268,
  "whats-app": 22270,
  "wifi": 22271,
  "windows": 22272,
  "woman": 22273,
  "x": 22274,
  "yahoo": 22275,
  "youtube": 22276,
  "yuque": 22277,
  "zhihu": 22278,
  "zoom-in": 22279,
  "zoom-out": 22280,
}
`;
